--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
+        "autoprefixer": "^10.4.19",
+        "axios": "^1.7.2",
+        "flowbite": "^2.3.0",
         "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.4",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.14.1",
+        "datatables.net-dt": "^2.0.8",
+        "sweetalert2": "^11.12.0"
     }
 }
