--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "alpinejs": "^3.14.1",
+        "clipboard": "^2.0.11",
         "datatables.net-dt": "^2.0.8",
         "html2canvas": "^1.4.1",
         "sweetalert2": "^11.12.0"
